Fix spacing between top of judges and the title

--- a/src/components/Judges/Judges.scss
+++ b/src/components/Judges/Judges.scss
@@ -4,7 +4,7 @@
     color: #ffffff;
     padding-left: 212px;
     max-width: 650px;
-    margin-top: -33px;
+    margin-top: -45px;
     h3 {
         color: #ffffff;
         font-weight: normal !important;
